--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,6 +11,8 @@
       </div>
     </li>
     <li class="nav-item">About</li>
-    <li class="nav-item mt-auto mbmnn">MBMNN-DSGN</li>
+    <li class="nav-item mt-auto mbmnn">
+      <a class='invisible-link' routerLink="/login">MBMNN-DSGN</a>
+    </li>
   </ul>
 </nav>
