--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,36 @@
-<p>login works!</p>
+<div class="nav-spacer footer-spacer vh-100">
+  <div class="p-5" *ngIf="!currentSessionService.isAuthenticated(); else elseBlock">
+    <mat-card class="">
+      <mat-card-title> Login </mat-card-title>
+      <mat-card-content>
+        <form id="login-form" #lForm="ngForm" [formGroup]="loginForm" (ngSubmit)="submitLogin()" novalidate>
+          <mat-form-field class="w-100 pb-2" [ngClass]="{'mat-input-invalid': submitted && error?.code == 1}">
+            <input matInput type="text" formControlName="username" placeholder="Username" />
+            <mat-hint style="color: red;"
+                      *ngIf="submitted && error?.code == 1 && !loginForm.controls.username.hasError('required')">
+              {{error.message}}</mat-hint>
+            <mat-hint style="color: red;" *ngIf="submitted && loginForm.controls.username.hasError('required')">Field is
+              mandatory</mat-hint>
+          </mat-form-field>
+          <mat-form-field class="w-100" [ngClass]="{'mat-input-invalid': submitted && error?.code == 2}">
+            <input matInput type="password" formControlName="password" placeholder="Password" />
+            <mat-hint style="color: red;"
+                      *ngIf="submitted && error?.code == 2 && !loginForm.controls.password.hasError('required')">
+              {{error.message}}</mat-hint>
+            <mat-hint style="color: red;" *ngIf="submitted && loginForm.controls.password.hasError('required')">Field is
+              mandatory</mat-hint>
+          </mat-form-field>
+        </form>
+      </mat-card-content>
+      <mat-card-actions class="text-right">
+        <button mat-raised-button type="submit" form="login-form"> Sign In</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+  <ng-template #elseBlock>
+    <div class="d-flex h-100 justify-content-around align-items-center">
+      <button mat-raised-button (click)="logout()">Logout</button>
+      <button mat-raised-button routerLink="/new">New project!</button>
+    </div>
+  </ng-template>
+</div>
