--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 :root {
   --nav-width: 12rem;
   --footer-height: 4.5rem;
@@ -7,10 +9,16 @@
 html,
 body {
   margin: 0;
+  height: 100%;
 }
 
 html {
   scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
 .page-container {
@@ -32,3 +40,6 @@ html {
   width: 100%;
   height: var(--footer-height);
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
