--- a/src/app/pages/new-project/new-project.component.html
+++ b/src/app/pages/new-project/new-project.component.html
@@ -1,40 +1,40 @@
-<div class="nav-spacer footer-spacer pt-4" id="top">
-  <form [formGroup]="projectForm" novalidate="novalidate" class="px-5">
-    <div class="d-flex flex-column">
-      <!-- Project title -->
-      <div class="d-flex align-items-center justify-content-around">
-        <label class="mb-0 w-25 text-right">
-          <h4 class="mb-0 pr-2">Title:</h4>
-        </label>
-        <input type="text" class="form-control w-75" placeholder="Project title" formControlName="title" />
-      </div>
-      <!-- Project description -->
-      <div class="d-flex align-items-center justify-content-around mt-2">
-        <label class="mb-0 w-25 text-right">
-          <h4 class="mb-0 pr-2">Description:</h4>
-        </label>
-        <input type="text" class="form-control w-75" placeholder="Project description" formControlName="description" />
-      </div>
-      <!-- Main image -->
-      <div class="d-flex align-items-center justify-content-around mt-2">
-        <label class="mb-0 w-25 text-right">
-          <h4 class="mb-0 pr-2">Main image:</h4>
-        </label>
-        <app-image-upload class="w-75"></app-image-upload>
-      </div>
+<div class="nav-spacer footer-spacer" id="top">
+  <h1 class="bg-primary mb-3 py-4 text-center">New project</h1>
+  <form [formGroup]="projectForm" novalidate="novalidate" class="px-5 container">
+    <!-- Project title -->
+    <div class="row form-group">
+      <label class="mb-0 w-25 text-right">
+        <h4 class="mb-0 pr-2">Title:</h4>
+      </label>
+      <input type="text" class="form-control w-75" placeholder="Project title" formControlName="title" />
     </div>
-    <div class="d-flex justify-content-center">
+    <!-- Project description -->
+    <div class="row form-group">
+      <label class="mb-0 w-25 text-right">
+        <h4 class="mb-0 pr-2">Description:</h4>
+      </label>
+      <input type="text" class="form-control w-75" placeholder="Project description" formControlName="description" />
+    </div>
+    <!-- Main image -->
+    <div class="row form-group">
+      <label class="mb-0 w-25 text-right">
+        <h4 class="mb-0 pr-2">Main image:</h4>
+      </label>
+      <input type="file" class="form-control-file w-75" formControlName="mainImage">
+    </div>
+    <!-- Texts and images -->
+    <div class="row form-group">
       <!-- Texts -->
-      <div class="w-50">
-        <h2 class="text-center p-3"> Texts </h2>
-        <div class="row" *ngFor="let control of texts.controls; let i = index">
-          <div [formControlName]="i" class="form-group w-100 title d-flex justify-content-center">
+      <div formArrayName="texts" class="col">
+        <h2 class="text-center">Texts</h2>
+        <div *ngFor="let control of texts.controls; let i = index">
+          <div [formGroupName]="i" class="row form-group">
             <div class="col-2 d-flex justify-content-end align-items-center">
               <label class="mb-0">
                 <h4 class="mb-0">{{i+1}}:</h4>
               </label>
             </div>
-            <div class="col-6 d-flex justify-content-center align-items-center">
+            <div class="col-9 d-flex justify-content-center align-items-center">
               <input type="text" class="form-control w-100" placeholder="Lorem ipsum..." formControlName="text">
             </div>
             <div class="col-1 d-flex align-items-center">
@@ -42,17 +42,39 @@
             </div>
           </div>
         </div>
-        <div class="w-100 d-flex justify-content-center row">
+        <div class="row">
           <div class="col-2"></div>
-          <div class="col-6">
+          <div class="col-9">
             <button class="btn btn-success w-100" (click)="addText()">add</button>
           </div>
           <div class="col-1"></div>
         </div>
       </div>
       <!-- Images -->
-      <div class="w-50">
-        <h2 class="text-center p-3"> Images </h2>
+      <div formArrayName="images" class="col">
+        <h2 class="text-center">Images</h2>
+        <div *ngFor="let control of images.controls; let i = index">
+          <div [formGroupName]="i" class="row form-group">
+            <div class="col-2 d-flex justify-content-end align-items-center">
+              <label class="mb-0">
+                <h4 class="mb-0">{{i+1}}:</h4>
+              </label>
+            </div>
+            <div class="col-9 d-flex justify-content-center align-items-center">
+              <input type="file" class="form-control-file" formControlName="image">
+            </div>
+            <div class="col-1 d-flex align-items-center">
+              <button class="btn btn-danger" (click)="deleteImage(i)">&times;</button>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-2"></div>
+          <div class="col-9">
+            <button class="btn btn-success w-100" (click)="addImage()">add</button>
+          </div>
+          <div class="col-1"></div>
+        </div>
       </div>
     </div>
     <div class="d-flex justify-content-center mt-3">
