--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,30 +1,32 @@
 <div class="nav-spacer footer-spacer vh-100">
-  <div class="p-5">
-    <mat-card class="">
-      <mat-card-title> Login </mat-card-title>
-      <mat-card-content>
-        <form id="login-form" #lForm="ngForm" [formGroup]="loginForm" (ngSubmit)="submitLogin()" novalidate>
-          <mat-form-field class="w-100 pb-2" [ngClass]="{'mat-input-invalid': submitted && error?.code == 1}">
-            <input matInput type="text" formControlName="username" placeholder="Username" />
-            <mat-hint style="color: red;"
-                      *ngIf="submitted && error?.code == 1 && !loginForm.controls.username.hasError('required')">
-              {{error.message}}</mat-hint>
-            <mat-hint style="color: red;" *ngIf="submitted && loginForm.controls.username.hasError('required')">Field is
-              mandatory</mat-hint>
-          </mat-form-field>
-          <mat-form-field class="w-100" [ngClass]="{'mat-input-invalid': submitted && error?.code == 2}">
-            <input matInput type="password" formControlName="password" placeholder="Password" />
-            <mat-hint style="color: red;"
-                      *ngIf="submitted && error?.code == 2 && !loginForm.controls.password.hasError('required')">
-              {{error.message}}</mat-hint>
-            <mat-hint style="color: red;" *ngIf="submitted && loginForm.controls.password.hasError('required')">Field is
-              mandatory</mat-hint>
-          </mat-form-field>
-        </form>
-      </mat-card-content>
-      <mat-card-actions class="text-right">
-        <button mat-raised-button type="submit" form="login-form"> Sign In</button>
-      </mat-card-actions>
-    </mat-card>
+  <div class="container pt-5">
+    <div class="row justify-content-center outside-glow">
+      <mat-card class="col-6 border border-info rounded">
+        <mat-card-title> Login </mat-card-title>
+        <mat-card-content>
+          <form id="login-form" #lForm="ngForm" [formGroup]="loginForm" (ngSubmit)="submitLogin()" novalidate>
+            <mat-form-field class="w-100 pb-2" [ngClass]="{'mat-input-invalid': submitted && error?.code == 1}">
+              <input matInput type="text" formControlName="username" placeholder="Username" />
+              <mat-hint style="color: red;"
+                        *ngIf="submitted && error?.code == 1 && !loginForm.controls.username.hasError('required')">
+                {{error.message}}</mat-hint>
+              <mat-hint style="color: red;" *ngIf="submitted && loginForm.controls.username.hasError('required')">Field
+                is mandatory</mat-hint>
+            </mat-form-field>
+            <mat-form-field class="w-100" [ngClass]="{'mat-input-invalid': submitted && error?.code == 2}">
+              <input matInput type="password" formControlName="password" placeholder="Password" />
+              <mat-hint style="color: red;"
+                        *ngIf="submitted && error?.code == 2 && !loginForm.controls.password.hasError('required')">
+                {{error.message}}</mat-hint>
+              <mat-hint style="color: red;" *ngIf="submitted && loginForm.controls.password.hasError('required')">Field
+                is mandatory</mat-hint>
+            </mat-form-field>
+          </form>
+        </mat-card-content>
+        <mat-card-actions class="text-right">
+          <button mat-raised-button type="submit" form="login-form"> Sign In</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
   </div>
 </div>
